runtime/pavex_macros/tests/route/fail/unreachable_pub.rs
mod private {
    use pavex_macros::get;

    #[get(path = "/a")]
    pub fn a() {
        todo!()
    }
}

fn main() {}
